<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_plugins_oru</name>
  <version>0.0.1</version>
  <description>The gazebo_plugins_oru package</description>
  <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend> 
  <depend>gazebo11</depend>
  <depend>gazebo11_msgs</depend>
  <depend>gazebo11_plugins</depend>
  <depend>gazebo11_ros</depend>
  <depend>orunav2_generic</depend>
  <depend>eigen</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo plugin_path="${prefix}/lib" />
  </export>
</package>
