<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigo2_selector</name>
  <version>0.0.1</version>
  <description>The navigo2_selector package</description>
  <maintainer email="paolo.forte@oru.se">pofe</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>navigo2_core</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_util</depend>
  <depend>navigo2_msgs</depend>
  <depend>nav2_collision_monitor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <navigo2_core plugin="${prefix}/costmap_selector.xml" />
  </export>
</package>
