<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navthon_generic</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <depend>angles</depend>
  <depend>eigen</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <cpp cflags="-I${prefix}/include" />
  </export>
</package>
